PharmaDemo/src/objects/Product_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Adoption__c</fullName>
        <label>Adoption</label>
        <picklist>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Prescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Prescribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Indicator__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chs=45x30&amp;chf=bg,s,FFFFFF&amp;chd=t:&quot; &amp; TEXT( Call_Report__r.Contact__r.pc_Target_Calls__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Report__c</fullName>
        <label>Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Product Detail</relationshipLabel>
        <relationshipName>Product_Detail</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>Call_Report__r.CallDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <picklist>
            <picklistValues>
                <fullName>Improved efficacy for key age group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Treatments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Call_Report__r.Contact__r.Full_Name_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Message__c</fullName>
        <label>Product Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>PharmaProduct__c</referenceTo>
        <relationshipLabel>Product Detail</relationshipLabel>
        <relationshipName>R00Nj0000003oDL5EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Customers Seen</relationshipLabel>
        <relationshipName>Product_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Call_Report__r.Contact__r.Spec__c , Call_Report__r.Contact__r.Spec__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speciality</label>
        <type>Text</type>
    </fields>
    <label>Product Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Product Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>